@startuml
' data_readers.puml - 数据读取器模块
package "数据处理层 (data)" {
    package "数据读取器 (readers)" {
        class CSVReader {
            +ignore_cols: Set[str]
            +encoding: str
            +read(source: str, **kwargs: Any): Dict[str, Any]
            +run(**kwargs: Any): Any
        }
        class JSONReader {
            +encoding: str
            +read(source: str, **kwargs: Any): Dict[str, Any]
            +run(**kwargs: Any): Any
        }
        class DataReaderFactory {
            +_readers: Dict[str, Type[BaseReader]]
            +{static} create_reader(reader_type: str, **kwargs: Any): BaseReader
            +{static} register_reader(reader_type: str, reader_class: Type[BaseReader]): void
            +{static} get_supported_types(): list
        }
    }
}

' 继承
CSVReader --|> BaseReader
JSONReader --|> BaseReader

' 接口实现
CSVReader ..|> IDataReader
JSONReader ..|> IDataReader

' 工厂创建
DataReaderFactory ..> CSVReader : creates
DataReaderFactory ..> JSONReader : creates

' 异常
CSVReader ..> DataProcessingError : throws
JSONReader ..> DataProcessingError : throws

' 依赖
CSVReader --> DataUtils
JSONReader --> DataUtils

@enduml